Change back button redirect to index.html

--- a/BasicInfo.html
+++ b/BasicInfo.html
@@ -117,7 +117,7 @@ nextBtn.addEventListener("click", () => {
 </script>
 <script>
 document.getElementById("backBtn").addEventListener("click", () => {
-    window.location.href = "Alogin.html"; // your login page
+    window.location.href = "index.html"; // your login page
 });
 </script>
 
