Change redirect URL after onboarding completion

--- a/skill.html
+++ b/skill.html
@@ -90,7 +90,7 @@
     document.getElementById("nextBtn").addEventListener("click", function () {
       alert("Onboarding Completed!");
       // or redirect to dashboard
-       window.location.href = "Alogin.html";
+       window.location.href = "index.html";
     });
   </script>
 
