--- a/BasicInfo.html
+++ b/BasicInfo.html
@@ -65,7 +65,7 @@
 
           <!-- Buttons -->
           <div class="buttons">
-            <button id="backBtn" class="back-btn">← Back</button>
+            <button type="button" id="backBtn" class="back-btn">← Back</button>
             <button id="nextBtn" class="next-btn" disabled >Next
                 <span class="arrow">→</span>
 
